* Fixed: Problems with PHP 5.2.x.
* Fixed: Problem to go next unit when all answers are required but current unit do not have any assessable modules.
* Fixed: Show and Free Preview options in Course Structure settings.
* Fixed: Units inside the course are available agains the settings options.
* Fixed: Visual editor is blank and missing data after module reorder.
* Updated: Vimeo javascript for version 3.0.0.

= 2.1.0.2 =
-------------------------------------------------
* Added: A filter 'coursepress_update_student_progress' to allow turn off student progress update during modules update.
* Fixed: Problem with upgrade from 1.x to 2.0.

= 2.1.0.1 =
-------------------------------------------------
* Fixed: Compatibility with older PHP versions.
* Fixed: Video module problem with Vimeo movies.
* Fixed: Problem with proper display of a course structure.

= 2.1 =
-------------------------------------------------
* Added: Categories argument to [course_list] shortcode to filter courses.
* Added: HTML rel attribute to next and previous buttons.
* Added: New filter: coursepress_comment_form_args to filter new comment form arguments.
* Added: New filter: coursepress_comment_list_args to filter comments list arguments.
* Added: Option to disable emails individually
* Added: Password strength meter on student profile
* Added: Text color option for course certificate.
* Added: The ability to disable the strength meter in the enrollment pup-up.
* Added: Unit slug will be updated when you change unit title.
* Improved: Added certificate filter on students list on course edit screen.
* Improved: Add individual nonce when withdraw a student from a course.
* Improved: Automatic migration from users upgrading from version 1.x
* Improved: Better section title display - added information about no title.
* Improved: Form module UI for better display.
* Improved: Image display.
* Improved: Increase a course assessments page load time.